fix weezevent on mobile

--- a/main.css
+++ b/main.css
@@ -301,7 +301,7 @@ section {
 
 #contributions .step.weezevent.active  {
     position: fixed;
-    height: 100%;
+    height: 80%;
     top: 20%;
     left: 0;
     overflow: scroll;
@@ -312,7 +312,6 @@ section {
 .weezevent-container {
     left: 0;
     width: 100%;
-    height: 80%;
 }
 
 .three-times-payment-active .three-times, .one-time {
